<resources>
    <string name="app_name">SkegoApp</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_home">Home</string>
    <string name="title_task">Task</string>
    <string name="title_calendar">Calendar</string>
    <string name="input_title_task">Title Task</string>
    <string name="input_add_due_date">Add Due Date</string>
    <string name="input_add_difficulty">Add Difficulty</string>
    <string name="input_add_category">Add Category</string>
    <string name="input_add_duration">Add Duration</string>
    <string name="input_add_detail">Add Detail</string>
    <string name="arrow_icon">Arrow Icon</string>
    <string name="reset_password_icon">Password Icon</string>
    <string name="about_icon">About Icon</string>

    <string-array name="status_array">
        <item>Not Started</item>
        <item>On Progress</item>
        <item>Finish</item>
    </string-array>

    <string-array name="category_array">
        <item>WORK</item>
        <item>SCHOOL</item>
        <item>PERSONAL</item>
    </string-array>

    <string-array name="difficulty_array">
        <item>LOW</item>
        <item>MEDIUM</item>
        <item>HIGH</item>
    </string-array>

    <string-array name="duration_array">
        <item>Kurang dari 1 Jam</item>
        <item>1-3 Jam</item>
        <item>4-6 Jam</item>
        <item>Lebih dari 6 Jam</item>
    </string-array>


</resources>