<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.example.skegoapp.ui.main.ui.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/navigation_task"
        android:name="com.example.skegoapp.ui.main.ui.task.TaskFragment"
        android:label="@string/title_task"
        tools:layout="@layout/fragment_task" >
        <action
            android:id="@+id/action_taskFragment_to_addTaskFragment"
            app:destination="@id/addTaskFragment" />
    </fragment>

    <fragment
        android:id="@+id/navigation_calendar"
        android:name="com.example.skegoapp.ui.main.ui.calendar.CalendarFragment"
        android:label="@string/title_calendar"
        tools:layout="@layout/fragment_calendar" />
    <fragment
        android:id="@+id/addTaskFragment"
        android:name="com.example.skegoapp.ui.main.ui.add_task.AddTaskFragment"
        android:label="fragment_add_task"
        tools:layout="@layout/fragment_add_task" />
</navigation>